--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
-<html>
-    <head>
-        <title>Home Page</title>
-        <link type="text/css" href="example.css" rel="stylesheet"/>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+    <link type="text/css" href="example.css" rel="stylesheet"/>
+    <!-- Link to Raleway font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"> <!--adding a different font-->
+</head>
 
-    <body>
-        <div class="navbar">
-            <a class="nav-option" href="index.html">Home</a>
-            <a class="nav-option" href="about.html">About</a>
-            <a class="nav-option" href="interests.html">interests</a>
-        </div>
-        <h1>Welcome to my website!</h1>
-    </body>
+<body>
+    <div class="navbar">
+        <a class="nav-option" href="index.html">Home</a>
+        <a class="nav-option" href="about.html">About</a>
+        <a class="nav-option" href="Interests.html">Projects</a>
+    </div>
+    <center><h1>Welcome to Dawit's Website!</h1></center>
+    <center><h2>What is this website for?</h2></center>
+    <center><p1> Hi! My name is Dawit Kasy, and I am a freshmen at Quinnipiac University studying Computer Science.</p1></center>
+    <div class="border">
+    <center><p2> This Website is meant to show off who I am including:<br>
+        <br>
+        Education<br>
+        <br>
+        Coding Projects<br>
+        <br>
+        Personal Interests .</p2></center>
+    </div>
+</body>
 </html>
