--- a/Interests.html
+++ b/Interests.html
@@ -12,7 +12,6 @@
             <a class="nav-option" href="about.html">About</a>
             <a class="nav-option" href="Interests.html">Projects</a>
         </div>
-        <center><h1>Who Am I?<br></h1><center>
-            </center><h2>Hi! My name is Dawit Kasy, and I am a freshmen at Quinnipiac University studying Computer Science.</h2><center></center>
+        <center><h1>These Are my Personal Coding Projects<br></h1><center>
     </body>
 </html>
