--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
         <div class="navbar">
             <a class="nav-option" href="index.html">Home</a>
             <a class="nav-option" href="about.html">About</a>
-            <a class="nav-option" href="Interests.html">Projects</a>
+            <a class="nav-option" href="projects.html">Projects</a>
         </div>
         <center><h1>These Are my Personal Coding Projects<br></h1><center>
     </body>
