--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navbar">
         <a class="nav-option" href="index.html">Home</a>
         <a class="nav-option" href="about.html">About</a>
-        <a class="nav-option" href="Interests.html">Projects</a>
+        <a class="nav-option" href="projects.html">Projects</a>
     </div>
     <center><h1>Welcome to Dawit's Website!</h1></center>
     <center><h2>What is this website for?</h2></center>
