--- a/about.html
+++ b/about.html
@@ -24,17 +24,28 @@
     <div class="navbar">
         <a class="nav-option" href="index.html">Home</a>
         <a class="nav-option" href="about.html">About</a>
-        <a class="nav-option" href="Interests.html">Projects</a>
+        <a class="nav-option" href="projects.html">Projects</a>
     </div>
     <h1>Who Am I?</h1>
     <div class="container">
         <div class="paragraph">
             <h2>Hi! My name is Dawit Kasy, and I am a freshmen at Quinnipiac University studying Computer Science.</h2>
             <h2>Education</h2>
-            <p1>I graduated from Mountain Mission School</p1>
+            <p1>
+                I completed my high school education at Mountain Mission High School in 2023, 
+                and I am curently enrolled at Quinnipiac University, where I anticipate graduating in 2027. </p1>
+            <h2>Why did I choose Computer Science?</h2>
+            <p1>With how involved technology is in everyday use, I was always extremely curious to learn how it worked.
+                I wanted learn how computers turn a bunch of 1's and 0's into the incredible applications we all use today, and 
+                apply what I learn be able to build something I would want to use. I currently, have about one school year's
+                worth of experience learning in the Java programming language. I have experience with Object Oriented Programming principles
+                and certain data structures such as Lists, Stacks, and Queues.
+            </p1>
+            <h2>Interests</h2>
+            <p1></p1>
         </div>
         <div class="image">
-            <img src="./images/9FFFBF1C-FB4F-47FC-A47B-8DA506688664.jpeg" alt="When I visited North Carolina" style="width:300px;height:500px;">
+            <img src="./images/9FFFBF1C-FB4F-47FC-A47B-8DA506688664.jpeg" alt="When I visited North Carolina" style="width:250px;height:500px;">
         </div>
     </div>
 </body>
