saving final changes

--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,13 @@
             <a class="nav-option" href="about.html">About</a>
             <a class="nav-option" href="projects.html">Projects</a>
         </div>
-        <center><h1>These Are my Personal Coding Projects<br></h1><center>
+        <center><h1>These Are my Personal Coding Projects<br></h1>
+            <h2>Q-Bay</h2>
+            <p1>This project was an app made specifically for Quinnipiac students. This allows students to buy or put items up for sale
+                from a store. My team and I used Java to make this project. Here is the Link:<br> <a href="https://github.com/NicholasTourony/qBay" target="_blank">Link to code</a>
+            </p1> 
+            <h2>Text-Based Adventure Game</h2>
+            <p1>This is a game where you play as a character stuck in cave and need to find a way out.<br> <a href="https://github.com/b-regan11/text-based-adventure" target="_blank">Link to code</a>
+            </p1><center>
     </body>
 </html>
