--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             <h2>Hi! My name is Dawit Kasy, and I am a freshmen at Quinnipiac University studying Computer Science.</h2>
             <h2>Education</h2>
             <p1>
-                I completed my high school education at Mountain Mission High School in 2023, 
+                I completed my high school education at Mountain Mission School in 2023, 
                 and I am curently enrolled at Quinnipiac University, where I anticipate graduating in 2027. </p1>
             <h2>Why did I choose Computer Science?</h2>
             <p1>With how involved technology is in everyday use, I was always extremely curious to learn how it worked.
