--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,8 @@
                 from a store. My team and I used Java to make this project. Here is the Link:<br> <a href="https://github.com/NicholasTourony/qBay" target="_blank">Link to code</a>
             </p1> 
             <h2>Text-Based Adventure Game</h2>
-            <p1>This is a game where you play as a character stuck in cave and need to find a way out. This project was made using Java.<br> <a href="https://github.com/b-regan11/text-based-adventure" target="_blank">Link to code</a>
+            <p1>This is a game where you play as a character stuck in cave and need to find a way out.<br>
+                 This project was made using Java.<br> <a href="https://github.com/b-regan11/text-based-adventure" target="_blank">Link to code</a>
             </p1><center>
     </body>
 </html>
