--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="navbar">
-        <a class="nav-option" href="ndex.html">Home</a>
+        <a class="nav-option" href="index.html">Home</a>
         <a class="nav-option" href="about.html">About</a>
         <a class="nav-option" href="projects.html">Projects</a>
     </div>
