--- a/about.html
+++ b/about.html
@@ -25,9 +25,8 @@
                 apply what I learn be able to build something I would want to use.
             </p1>
             <h2>Experience</h2></ceter>
-             <p1> I currently, have about one school year's
-                worth of experience learning in the Java programming language. I have experience with Object Oriented Programming principles
-                and certain data structures such as Lists, Stacks, and Queues.</p1>  
+             <p1> I currently have about three school year's worth of experience learning in the Java programming language. 
+            I have experience with Object Oriented Programming principles and data structures and algorithms, Agile Development, Object Oriented Programming, Data Structures, Algorithms, Git, GitHub, Visual Studio Code, GitHub, Trello, Unity, R</p1>  
         </div>
         <div class="image">
             <img src="./images/9FFFBF1C-FB4F-47FC-A47B-8DA506688664.jpeg" alt="When I visited North Carolina" style="width:250px;height:500px;">
