--- a/projects.html
+++ b/projects.html
@@ -1,25 +1,64 @@
-<html>
-    <head>
-        <title>Home Page</title>
-        <link type="text/css" href="example.css" rel="stylesheet"/>
-         <!-- Link to Raleway font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"> <!--adding a different font-->
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects - Dawit's Website</title>
+    <link rel="stylesheet" href="example.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap">
+</head>
+<body>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <a class="nav-option" href="index.html">Home</a>
+        <a class="nav-option" href="about.html">About</a>
+        <a class="nav-option" href="projects.html">Projects</a>
+    </nav>
 
-    <body>
-        <div class="navbar">
-            <a class="nav-option" href="index.html">Home</a>
-            <a class="nav-option" href="about.html">About</a>
-            <a class="nav-option" href="projects.html">Projects</a>
+    <!-- Hero Section -->
+    <header class="hero">
+        <h1>These Are My Personal Coding Projects</h1>
+    </header>
+
+    <!-- Projects Section -->
+    <section class="container">
+        <div class="paragraph">
+            <!-- Thief of Visions -->
+            <h2>Thief of Visions</h2>
+            <div class="project-gallery">
+                <img src="C:\Users\dawit\OneDrive\Desktop\MyWebsite\images\LL!.png" alt="Thief of Visions Screenshot 1" class="project-image">
+                <img src="C:\Users\dawit\OneDrive\Desktop\MyWebsite\images\Screenshot 2025-10-01 154947.png" alt="Thief of Visions Screenshot 2" class="project-image">
+                <img src="C:\Users\dawit\OneDrive\Desktop\MyWebsite\images\Screenshot 2025-10-01 155006.png" alt="Thief of Visions Screenshot 3" class="project-image">
+            </div>
+            <p>This is a game I, along with four others, created for Quinnipiac's SER225 Agile Development class.  
+            Embark on an epic quest to find the King's missing artifact! Battle enemies, complete quests, and unravel 
+            the mystery in this captivating fantasy/mystery RPG. This game offers turn-based combat, character customization, 
+            and an immersive storyline. My team and I used Java to make this project.  
+            <a href="https://github.com/JLaFrance3/SER225-Game?tab=readme-ov-file" target="_blank">github repo</a>
+            <a href="https://a-r-t.github.io/SER225-Project-Website/semesters/fall2024/teams/gameforge-alchemists" target="_blank">|In depth description and link to download</a></p>
+
+            <!-- 2D Fighting Game -->
+            <h2>2-D Fighting Game</h2>
+            <div class="project-gallery">
+                <img src="C:\Users\dawit\OneDrive\Desktop\MyWebsite\images\Screenshot 2025-10-01 163538.png" alt="2D Fighting Game Screenshot 1" class="project-image">
+                <img src="C:\Users\dawit\OneDrive\Desktop\MyWebsite\images\Screenshot 2025-10-01 163659.png" alt="2D Fighting Game Screenshot 2" class="project-image">
+                <img src="C:\Users\dawit\OneDrive\Desktop\MyWebsite\images\Screenshot 2025-10-01 163742.png" alt="2D Fighting Game Screenshot 3" class="project-image">
+            </div>
+            <p>This game is a 2D fighter containing two characters from some of my favorite shows. 
+            It was made with JavaScript, HTML, and CSS, using the p5.js library and p5.play extension.  
+            <a href="https://editor.p5js.org/gdd140-dkasy/sketches/1i04csU40" target="_blank">Link to Play</a> | 
+            <a href="https://github.com/dkasy64/Final-Project-Game-2D-Fighter" target="_blank">github repo</a>
+        <!-- 👇 Sample Project Placeholder -->
+            <h2>GitHub-Application Repo Automation</h2>
+            <div class="project-gallery">
+                <img src="C:\Users\dawit\OneDrive\Desktop\MyWebsite\images\Screenshot 2025-10-01 165624.png" alt="Sample Project Screenshot 1" class="project-image">
+            </div>
+            <p>This project was made in collaboration with a group of 3. The main purpose of this project is automate the process of turning an existing project into a gitHub repo. 
+            The user must input the file path of desired project, and then input what he want to name the Repo. Then click turn project 
+            into repo. This project vastly decreases the time it takes to make a git repo and it takes away all of the steps of knowing the 
+            commandline commands. Made with Java using the Swing Library for visual components, and also using the github API client.    
+            <a href="https://github.com/dkasy64/GitHub-Application" target="_blank">github repo</a></p>
         </div>
-        <center><h1>These Are my Personal Coding Projects<br></h1>
-            <h2>Q-Bay</h2>
-            <p1>This project was an app made specifically for Quinnipiac students. This allows students to buy or put items up for sale
-                from a store. My team and I used Java to make this project. Here is the Link:<br> <a href="https://github.com/NicholasTourony/qBay" target="_blank">Link to code</a>
-            </p1> 
-            <h2>Text-Based Adventure Game</h2>
-            <p1>This is a game where you play as a character stuck in cave and need to find a way out.<br>
-                 This project was made using Java.<br> <a href="https://github.com/b-regan11/text-based-adventure" target="_blank">Link to code</a>
-            </p1><center>
-    </body>
+    </section>
+</body>
 </html>
