fixed image issue again

--- a/projects.html
+++ b/projects.html
@@ -26,9 +26,9 @@
             <!-- Thief of Visions -->
             <h2>Thief of Visions</h2>
             <div class="project-gallery">
-                <img src="images/LL!.png" alt="Thief of Visions Screenshot 1" class="project-image">
-                <img src="images/Screenshot 2025-10-01 154947.png" alt="Thief of Visions Screenshot 2" class="project-image">
-                <img src="images/Screenshot 2025-10-01 155006.png" alt="Thief of Visions Screenshot 3" class="project-image">
+                <img src=".images/LL!.png" alt="Thief of Visions Screenshot 1" class="project-image">
+                <img src=".images/Screenshot 2025-10-01 154947.png" alt="Thief of Visions Screenshot 2" class="project-image">
+                <img src=".images/Screenshot 2025-10-01 155006.png" alt="Thief of Visions Screenshot 3" class="project-image">
             </div>
             <p>This is a game I, along with four others, created for Quinnipiac's SER225 Agile Development class.  
             Embark on an epic quest to find the King's missing artifact! Battle enemies, complete quests, and unravel 
@@ -40,9 +40,9 @@
             <!-- 2D Fighting Game -->
             <h2>2-D Fighting Game</h2>
             <div class="project-gallery">
-                <img src="C:images/Screenshot 2025-10-01 163538.png" alt="2D Fighting Game Screenshot 1" class="project-image">
-                <img src="C:images/Screenshot 2025-10-01 163659.png" alt="2D Fighting Game Screenshot 2" class="project-image">
-                <img src="C:images/Screenshot 2025-10-01 163742.png" alt="2D Fighting Game Screenshot 3" class="project-image">
+                <img src=".images/Screenshot 2025-10-01 163538.png" alt="2D Fighting Game Screenshot 1" class="project-image">
+                <img src=".images/Screenshot 2025-10-01 163659.png" alt="2D Fighting Game Screenshot 2" class="project-image">
+                <img src=".images/Screenshot 2025-10-01 163742.png" alt="2D Fighting Game Screenshot 3" class="project-image">
             </div>
             <p>This game is a 2D fighter containing two characters from some of my favorite shows. 
             It was made with JavaScript, HTML, and CSS, using the p5.js library and p5.play extension.  
@@ -51,7 +51,7 @@
         <!-- 👇 Sample Project Placeholder -->
             <h2>GitHub-Application Repo Automation</h2>
             <div class="project-gallery">
-                <img src="C:images/Screenshot 2025-10-01 165624.png" alt="Sample Project Screenshot 1" class="project-image">
+                <img src=".images/Screenshot 2025-10-01 165624.png" alt="Sample Project Screenshot 1" class="project-image">
             </div>
             <p>This project was made in collaboration with a group of 3. The main purpose of this project is automate the process of turning an existing project into a gitHub repo. 
             The user must input the file path of desired project, and then input what he want to name the Repo. Then click turn project 
